@@ -4,6 +4,7 @@ v1.4
 	info tab - album info expander?
 	edit->save all: allow canceling, x at top right, prevent user typing
 	update audioscrobbler to protocol 1.2
+		cache should be retained over client restarts
 	artwork: album covers?
 
 v1.5
