@@ -1,10 +1,11 @@
 v1.4 - Pending
 	+ Integrate info window into main player
 	+ Increased speed for various actions
+	+ Update to audioscrobbler protocol 1.2 and scrobbling bug fixes (mveers)
 	+ Vertically center currently playing song
 	+ Allow screen center for notification popup
 	+ Preference for saving lyrics to music file's directory (like artwork)
-	+ Allow hiding/reordering notebook tabs (e.g. playlists, streams, info)
+	+ Allow hiding and reordering notebook tabs (e.g. playlists, streams, info)
 	+ Retain library path when re-opening Sonata
 	+ Remove confusing 'remote only' and 'remote, then local' artwork options
 	+ Ability to hide progress bar (can create very minimal player)
